@@ -1,7 +1,7 @@
 /*
  *   JSampler - a java front-end for LinuxSampler
  *
- *   Copyright (C) 2005-2006 Grigor Iliev <grigor@grigoriliev.com>
+ *   Copyright (C) 2005-2007 Grigor Iliev <grigor@grigoriliev.com>
  *
  *   This file is part of JSampler.
  *
@@ -51,10 +51,14 @@ import net.sf.juife.event.TaskListener;
 import org.jsampler.CC;
 import org.jsampler.JSPrefs;
 
+import org.jsampler.event.ParameterEvent;
+import org.jsampler.event.ParameterListener;
+
 import org.jsampler.task.Audio;
 import org.jsampler.view.ParameterTable;
 
 import org.linuxsampler.lscp.AudioOutputDriver;
+import org.linuxsampler.lscp.Parameter;
 
 import static org.jsampler.view.std.StdI18n.i18n;
 import static org.jsampler.view.std.StdPrefs.*;
@@ -81,7 +85,8 @@ public class JSNewAudioDeviceDlg extends EnhancedDialog {
 	}
 	
 	/** Creates a new instance of NewMidiDeviceDlg */
-	public JSNewAudioDeviceDlg(Dialog owner) {
+	public
+	JSNewAudioDeviceDlg(Dialog owner) {
 		super(owner, i18n.getLabel("JSNewAudioDeviceDlg.title"));
 		
 		initNewAudioDeviceDlg();
@@ -98,6 +103,13 @@ public class JSNewAudioDeviceDlg extends EnhancedDialog {
 		
 		parameterTable.getModel().setEditFixedParameters(true);
 		
+		parameterTable.getModel().addParameterListener(new ParameterListener() {
+			public void
+			parameterChanged(ParameterEvent e) {
+				updateParameters();
+			}
+		});
+		
 		cbDrivers.addActionListener(new ActionListener() {
 			public void
 			actionPerformed(ActionEvent e) {
@@ -106,6 +118,7 @@ public class JSNewAudioDeviceDlg extends EnhancedDialog {
 				if(d == null) return;
 				cbDrivers.setToolTipText(d.getDescription());
 				parameterTable.getModel().setParameters(d.getParameters());
+				updateParameters();
 			}
 		});
 		
@@ -169,6 +182,40 @@ public class JSNewAudioDeviceDlg extends EnhancedDialog {
 			public void
 			windowActivated(WindowEvent e) { btnCreate.requestFocusInWindow(); }
 		});
+	}
+	
+	private void
+	updateParameters() {
+		AudioOutputDriver d = (AudioOutputDriver)cbDrivers.getSelectedItem();
+		if(d == null) return;
+		
+		final Parameter[] parameters = parameterTable.getModel().getParameters();
+		
+		final Audio.GetDriverParametersInfo task =
+			new Audio.GetDriverParametersInfo(d.getName(), parameters);
+		
+		task.addTaskListener(new TaskListener() {
+			public void
+			taskPerformed(TaskEvent e) {
+				if(task.doneWithErrors()) return;
+				for(Parameter p : parameters) {
+					for(Parameter p2 : task.getResult()) {
+						if(p2.getName().equals(p.getName())) {
+							p2.setValue(p.getValue());
+							if(p2.getValue() == null) {
+								p2.setValue(p2.getDefault());
+							}
+							break;
+						}
+						
+					}
+				}
+				
+				parameterTable.getModel().setParameters(task.getResult());
+			}
+		});
+		
+		CC.getTaskQueue().add(task);
 	}
 	
 	protected void
